Closed Bug 89017 Opened 25 years ago Closed 25 years ago

PredicateList::evaluatePredicates isn't nifty

Categories

(Core :: XSLT, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: axel, Assigned: axel)

Details

Attachments

(1 file)

The use of NodeSet::remove is sad, and it's prolly slow for foo[6]. The code should be redone. Assigning to me Axel
attaching patch. this has: code cleanup ListIterator pattern changed from heap to stack, no new. use txListIterator added assertion for null checks optimize code in the respect that we don't check for duplicates in NodeSets. This isn't needed, as we don't deal with any Node, that hasn't been part of the NodeSet already. (restore that at the end). I didn't go for switching the two NodeSets, basically for three reasons: We have to modify the original NodeSet, so I had to keep track of which is the current one. For uneven number of predicates, we still have to copy, so the case of one predicate doesn't gain any profit. And we had to switch the context nodeset in each run. --> not worth the trouble IMHO. Axel
Status: NEW → ASSIGNED
Keywords: review
r=peterv. Now send me that 100 DM you promised me for this r stamp.
and I thought you wanna get rid of dying currencies. Here you go: 100 DM. Axel
sr=jst, I'm thinking I need some of those DM's too by now :-)
fix checked in, made mental note to ship some DM to jst next year. Axel
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Keywords: review
Resolution: --- → FIXED
have you sent those 100DM yet?
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: