bug 89017, PredicateList::evaluatePredicates redone, + code cleanup. r=peterv,sicking,sr=jst